<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/istockphoto12"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UselessParent">


            <EditText
                android:id="@+id/signup_firstname"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:autofillHints="firstName"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/signup_firstname"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_lastname"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints="lastName"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/signup_lastname"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/signup_email"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/signup_confirm"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/signup_button"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/loginRedirectText"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>