<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BooksActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="1dp">

                <ImageButton
                    android:id="@+id/prevoiusact"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/prevoiusact"
                    android:src="@drawable/ic_outline_left_24" />
            </Toolbar>

            <TextView
                android:id="@+id/details"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="150dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/details"
                android:textColor="@color/teal_700"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/details"
                android:orientation="vertical"
                android:padding="10dp">



                <TextView
                    android:id="@+id/quantity_of_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quantity"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/items"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="phone"
                    android:background="@drawable/lavender_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/items"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/bkState"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints="name"
                    android:background="@drawable/lavender_border"
                    android:drawablePadding="8dp"
                    android:hint="@string/bkState"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/location_spinner"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
            </LinearLayout>

            <Button
                android:id="@+id/dnt_button"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/dnt_button"
                android:textSize="18sp"
                app:cornerRadius="30dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>