<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/istockphoto12"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="430dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:foreground="@drawable/semi_transparent_background"
                android:orientation="vertical"

                android:padding="10dp">


                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/grey"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="password"
                    android:background="@drawable/lavender_border"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/grey"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/login_button"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login_button"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="30dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_button"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:padding="8dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/signupRedirectText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="14dp"
                        android:padding="8dp"
                        android:text="@string/signupRedirectText"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>